# munind

./: .gitignore  Cargo.toml  LICENSE  README.md  test_doc.txt
.github/workflows/: build-artifacts.yml  ci.yml
benchmark/: 01_build_dataset.sh  02_create_database.sh  02_create_glove_database.sh  03_run_benchmark.sh  03_run_glove_benchmark.sh  README.md  detect_embedding_profile.sh  download_tinystories_subset.py  run_benchmark.sh  run_glove_benchmark.sh
crates/munind-api/: Cargo.toml
crates/munind-api/src/: engine.rs  lexical.rs  lib.rs  payload_index.rs
crates/munind-bench/: Cargo.toml
crates/munind-bench/src/: main.rs
crates/munind-cli/: Cargo.toml
crates/munind-cli/src/: main.rs
crates/munind-core/: Cargo.toml
crates/munind-core/src/: config.rs  domain.rs  engine.rs  error.rs  lib.rs
crates/munind-index/: Cargo.toml
crates/munind-index/src/: engine.rs  exact.rs  graph.rs  lib.rs  lookup.rs  search.rs  seed.rs  vector.rs  worker.rs
crates/munind-rag/: Cargo.toml
crates/munind-rag/src/: lib.rs  pipeline.rs
crates/munind-storage/: Cargo.toml
crates/munind-storage/src/: id.rs  lib.rs  manifest.rs  segment.rs  wal.rs  wal_test.rs
docs/: README.md  architecture.md  benchmarking.md  cli.md  language-integration.md  operations.md  rust-api.md  search.md
examples/crud/: Cargo.toml  README.md
examples/crud/src/: create.rs  delete.rs  main.rs  read.rs  update.rs
plan/: 01-product-and-requirements.md  02-ngt-reference-mapping.md  03-architecture.md  04-storage-and-durability.md  05-indexing-and-search.md  06-application-retrieval-features.md  06-rag-memory-features.md  07-api-cli-and-observability.md  08-testing-benchmarking-release.md  09-implementation-roadmap.md  EXPECTATIONS.md  README.md
