[workspace]
resolver = "2"
members = [
    "crates/munind-core",
    "crates/munind-storage",
    "crates/munind-index",
    "crates/munind-rag",
    "crates/munind-cli",
    "crates/munind-bench",
    "crates/munind-api"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Adel"]
publish = false

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
