[package]
name = "munind-bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
munind-core = { path = "../munind-core" }
munind-api = { path = "../munind-api" }
munind-rag = { path = "../munind-rag" }
