[package]
name = "munind-rag"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
munind-core = { path = "../munind-core" }
munind-api = { path = "../munind-api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.26.0"
